tests/negative/gold/unresolved_test.gold
tests/negative/unresolved_test.toit:6:7: error: Unresolved identifier: 'bar'
  foo bar (gee (toto 1 2))
      ^~~
tests/negative/unresolved_test.toit:6:17: error: Unresolved identifier: 'toto'
  foo bar (gee (toto 1 2))
                ^~~~
tests/negative/unresolved_test.toit:6:12: error: Unresolved identifier: 'gee'
  foo bar (gee (toto 1 2))
           ^~~
tests/negative/unresolved_test.toit:6:3: error: Unresolved identifier: 'foo'
  foo bar (gee (toto 1 2))
  ^~~
Compilation failed.
